tests/models/struct/named/i128/fail/lt.rs
use dade::model;
#[model]
struct TestModel {
    #[field(lt = 2.0)]
    value: i128,
}
fn main() {}
